export interface VehicleInfo {
    type: string;
    brand: string;
    model: string;
    licensePlate: string;
    rcDocumentUrl: string;
    insuranceUrl: string;
    isVerified: boolean;
}

